perf & a11y audit fixes

--- a/layouts/partials/2_components/footer/footer-contact.html
+++ b/layouts/partials/2_components/footer/footer-contact.html
@@ -9,10 +9,10 @@
   </div>
   <div class="footer-copyright">
     <div class="soc-media-icons flex text-lg">
-      <a href="#0"><svg class="icon"><use xlink:href="#icon-facebook-circle" /></svg></a>
-      <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
-      <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
+      <a href="#0"><svg class="icon"><use xlink:href="#icon-facebook-circle" /></svg><span class="sr-only">Like us on Facebook</span></a>
+      <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg><span class="sr-only">Follow us on Twitter</span></a>
+      <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg><span class="sr-only">Find us on LinkedIn.</span></a>
     </div>
-    <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+    <p class="mb-0 text-sm">&copy; {{ now.Year }} Concordus Applications. All rights reserved.</p>
   </div>
 </section>
