--- a/layouts/partials/2_components/navigation/contact-nav.html
+++ b/layouts/partials/2_components/navigation/contact-nav.html
@@ -14,7 +14,7 @@
         <a class="icon-link" href="//twitter.com/_ericthayer/">
           <svg class="icon mr-0">
             <use xlink:href="#icon-twitter" />
-          </svg><span class="sr-only">Find me on Twitter.</span>
+          </svg><span class="sr-only">Find me on Twitter</span>
           <span class="icon-tooltip">Twitter</span>
         </a>
       </li>
@@ -22,7 +22,7 @@
         <a class="icon-link" href="//github.com/ericthayer/">
           <svg class="icon mr-0">
             <use xlink:href="#icon-github" />
-          </svg><span class="sr-only">Visit my GitHub profile.</span>
+          </svg><span class="sr-only">Visit my GitHub profile</span>
           <span class="icon-tooltip">GitHub</span>
         </a>
       </li>
@@ -30,7 +30,7 @@
         <a class="icon-link" href="//codepen.io/ericthayer/">
           <svg class="icon mr-0">
             <use xlink:href="#icon-codepen" />
-          </svg><span class="sr-only">Visit my CodePen page.</span>
+          </svg><span class="sr-only">Visit my CodePen page</span>
           <span class="icon-tooltip">CodePen</span>
         </a>
       </li>
@@ -38,7 +38,7 @@
         <a class="icon-link" href="//dribbble.com/ethayer/">
           <svg class="icon mr-0">
             <use xlink:href="#icon-dribble" />
-          </svg><span class="sr-only">View my Dribble profile.</span>
+          </svg><span class="sr-only">View my Dribble profile</span>
           <span class="icon-tooltip">Dribble</span>
         </a>
       </li>
