--- a/layouts/partials/2_components/navigation/main-menu.html
+++ b/layouts/partials/2_components/navigation/main-menu.html
@@ -8,28 +8,16 @@
         {{ range .Site.Menus.main }}
         {{ if .HasChildren }}
         <li{{if $currentPage.IsMenuCurrent "main" . }} class="nav-item dropdown active" {{ else }} class="nav-item dropdown" {{end}}>
-          <a id="{{ .Name }}-dropdown" class="nav-link dropdown-toggle" href="#0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ .Pre }}
-            {{ .Name }}
-          </a>
+          <a id="{{ .Name }}-dropdown" class="nav-link dropdown-toggle" href="#main" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{- .Name -}}</a>
           <div class="dropdown-menu" aria-labelledby="{{ .Name }}-dropdown">
             {{ range .Children }}
-            <a class="dropdown-item{{if $currentPage.IsMenuCurrent "main" . }} active{{end}}" href="{{ .URL | relLangURL }}">
-              {{ .Pre }}
-              {{ .Name }}
-            </a>
+            <a class="dropdown-item{{if $currentPage.IsMenuCurrent "main" . }} active{{end}}" href="{{ .URL | relLangURL }}">{{- .Name -}}</a>
             {{ end }}
           </div>
         </li>
         {{ else }}
         <li{{if $currentPage.IsMenuCurrent "main" . }} class="nav-item active" {{ else }} class="nav-item" {{end}}>
-          <a class="nav-link" href="{{ .URL | relLangURL }}">
-            {{ .Pre }} 
-            {{ .Name }} 
-            {{if $currentPage.IsMenuCurrent "main" . }}
-              <span class="sr-only">current page</span>
-            {{ end }}
-          </a>        
+          <a class="nav-link" href="{{ .URL | relLangURL }}">{{- .Name -}} {{if $currentPage.IsMenuCurrent "main" . }}<span class="sr-only">current page</span>{{ end }}</a>
         </li>
         {{ end }}
         {{ end }}
