--- a/layouts/partials/_base/js/main-js.html
+++ b/layouts/partials/_base/js/main-js.html
@@ -36,7 +36,7 @@
 <!-- Bootstrap core -->
 <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="{{ .Site.BaseURL }}js/libs/ie10-viewport-bug-workaround.js"></script>
+<!-- <script src="{{ .Site.BaseURL }}js/libs/ie10-viewport-bug-workaround.js"></script> -->
 <!-- Custom scripts -->
 <script src="{{ .Site.BaseURL }}js/script.min.js"></script>
 
