--- a/layouts/partials/_base/js/headroom-js.html
+++ b/layouts/partials/_base/js/headroom-js.html
@@ -4,13 +4,12 @@
   var mq = window.matchMedia('(min-width: 48em)');
   if(mq.matches) {
     // grab an element
-    var myElement = document.querySelector(".site-header");
+    var stickyNav = document.querySelector(".site-header");
     // construct an instance of Headroom, passing the element
-    var headroom  = new Headroom(myElement);	
+    var headroom  = new Headroom(stickyNav);	
     // initialise
     headroom.init();
   } 
   else {  
-    headroom.destroy();
   }
 </script>
