--- a/layouts/partials/2_components/navigation/main-menu.html
+++ b/layouts/partials/2_components/navigation/main-menu.html
@@ -22,7 +22,13 @@
         {{ end }}
         {{ end }}
         <li class="nav-item">
-          <a class="nav-link" href="#demo-modal" data-toggle="modal" data-target="#demo-modal" title="open video demo">Demo</a>
+          <a 
+            class="nav-link" 
+            href="#video-demo-modal" 
+            data-toggle="modal" 
+            data-target="#video-demo-modal" 
+            title="open video demo"
+            >Demo</a>
         </li>
       </ul>
     </div>
