--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,74 +3,12 @@
 <!-- Main -->
 <main id="main" role="main">
   {{ .Content }}
+  {{ partial "3_modules/contact-form-section.html" . }}
 </main>
 {{ partial "3_modules/site-footer.html" . }}
 </div>
 <!-- END .site-wrapper -->
-
-<!-- Contact modal -->
-<div class="modal fade" id="quick-contact-modal" tabindex="-1" role="dialog" aria-labelledby="quick-contact-modal" aria-hidden="true">
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <div class="modal-dialog mw-48em" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2 class="modal-title h5 mb-0" id="contact-modal">Get in touch</h2>
-      </div>
-      <div class="modal-body">
-        <form id="quick-contact-form" action="post">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label for="qc-name" class="form-control-label">Name:</label>
-              <input type="text" class="form-control" id="qc-name" name="name" required>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="qc-email" class="form-control-label">Email:</label>
-              <input type="email" class="form-control" id="qc-email" name="email" autocorrect="off" autocapitalize="none" spellcheck="false" required>
-            </div>
-          </div>
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label for="qc-company-name" class="form-control-label">Company:</label>
-              <input type="text" class="form-control" id="qc-company-name" name="company-name">
-            </div>
-            <div class="form-group col-md-6">
-              <label for="qc-phone" class="form-control-label">Phone:</label>
-              <input type="tel" class="form-control" id="qc-phone" name="phone" pattern="[0-9]*" maxlength="10">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="qc-message-text" class="form-control-label">Message:</label>
-            <textarea class="form-control" id="qc-message-text" name="message"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Demo modal -->
-<div class="modal modal-clean fade" id="video-demo-modal" tabindex="-1" role="dialog" aria-labelledby="video-demo-modal" aria-hidden="true">
-  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2 class="modal-title h5 mb-0 sr-only" id="demo-modal">Concordus Video Demo</h2>
-      </div>
-      <div class="modal-body">
-        <div class="media-wrap video">
-          <iframe class="lazyload" width="100%" src="https://www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{{ partial "2_components/modals/quick-contact-modal.html" . }}
+{{ partial "2_components/modals/video-modal.html" . }}
 
 {{ partial "_base/js/headroom-js.html" . }}
