--- a/partials/main-menu.html
+++ b/partials/main-menu.html
@@ -18,7 +18,7 @@
                   <a class="dropdown-item" href="//www.gr8market.biz/">Gr8Market</a>
                   <a class="dropdown-item" href="//www.gr8cloud.biz/">Gr8Cloud</a>
                   <!--<a class="dropdown-item" href="//maxcentive.netlify.com/">MaxCentive</a>-->
-                  <a class="dropdown-item" href="products/wmsb/">Watch My School Bus</a>
+                  <a class="dropdown-item" href="//www.watchmyschoolbus.com/">Watch My School Bus</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
